// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CustomComponent /> outside renderer should render component in error state to snapshot 1`] = `
<CustomComponent
  label="custom-component"
  name="custom-component"
  sideEffect={[Function]}
  validate={
    Array [
      Object {
        "type": "required",
      },
    ]
  }
>
  <div
    className="input-wrapper"
  >
    <label
      className="input-label"
    >
      custom-component
    </label>
    <input
      name="custom-component"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      value=""
    />
    <div
      className="custom-error-block"
    >
      <span>
        required
      </span>
    </div>
  </div>
</CustomComponent>
`;

exports[`<CustomComponent /> outside renderer should render component to snapshot 1`] = `
<CustomComponent
  label="custom-component"
  name="custom-component"
  sideEffect={[Function]}
>
  <div
    className="input-wrapper"
  >
    <label
      className="input-label"
    >
      custom-component
    </label>
    <input
      name="custom-component"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      value=""
    />
  </div>
</CustomComponent>
`;
